# superquadric-model

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  README.md  index.html  superquadric-detection.xml  superquadric-model.xml
app/: CMakeLists.txt
app/conf/: config-classes-fixed.ini  config-classes.ini  config.ini
app/conf/primary_shape_database/box/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt
app/conf/primary_shape_database/cylinder/: 1.txt  2.txt  3.txt  4.txt
app/conf/primary_shape_database/sphere/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt
app/script/: superquadric-detection.xml  superquadric-detection.xml.template  superquadric-detection.xml~
app/scripts/: superquadric-detection.xml.template  superquadric-model.xml.template
conf/: config.ini
doxygen/: doc-compile.ps1  doc-compile.sh  generate.txt
doxygen/doc/html/: annotated.html  classSpatialDensityFilter.html  classSuperQuadric__NLP.html  classSuperqComputation.html  classSuperqModule.html  classSuperqVisualization.html  classes.html  classsuperquadricModel__IDL.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d6d9cae02a256ab35e2be3d8803e4934.html  files.html  functions.html  functions_b.html  functions_c.html  functions_e.html  functions_f.html  functions_func.html  functions_g.html  functions_h.html  functions_i.html  functions_m.html  functions_n.html  functions_o.html  functions_p.html  functions_r.html  functions_s.html  functions_t.html  functions_u.html  functions_v.html  functions_vars.html  functions_w.html  functions_x.html  group__superquadric-model.html  hierarchy.html  index.html  main_8cpp_source.html  menudata.js  modules.html  superqComputation_8cpp_source.html  (+8 more)
doxygen/doc/html/search/: all_0.js  all_1.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  functions_0.js  functions_1.js  (+24 more)
doxygen/doc/latex/: annotated.tex  classSpatialDensityFilter.tex  classSuperQuadric__NLP.tex  classSuperqComputation.tex  classSuperqModule.eps  classSuperqModule.tex  classSuperqVisualization.tex  classsuperquadricModel__IDL.eps  classsuperquadricModel__IDL.tex  group__superquadric-model.tex  hierarchy.tex  modules.tex  refman.tex
doxygen/generated-from-xml/: superquadric-model.xml.dox
example/app/script/: grasping-test.xml.template
example/src/: idl.thrift  main.cpp
idl_dox/: superquadricDetection_IDL.h  superquadricModel_IDL.h
include/: sphere.h  superqComputation.h  superqModule.h  superqVisualization.h  superquadric.h  threadTree.h  tree.h
src/: idl.thrift  main.cpp  main.cpp.autosave  sphere.cpp  superqComputation.cpp  superqModule.cpp  superqVisualization.cpp  superquadric-detection.xml  superquadric.cpp  threadTree.cpp  tree.cpp  viewer.cpp
tutorial/: CMakeLists.txt  README.md
tutorial/app/conf/: config.ini
tutorial/app/script/: testing-module.xml.template
tutorial/src/: idl.thrift  main.cpp
